--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -1,146 +1,148 @@
 // @debug $card; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
 
 .#{$card} {
-  --#{$card}--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
-  --#{$card}--BoxShadow: var(--#{$pf-global}--BoxShadow--sm);
-  --#{$card}--first-child--PaddingTop: var(--#{$pf-global}--spacer--lg);
-  --#{$card}--child--PaddingRight: var(--#{$pf-global}--spacer--lg);
-  --#{$card}--child--PaddingBottom: var(--#{$pf-global}--spacer--lg);
-  --#{$card}--child--PaddingLeft: var(--#{$pf-global}--spacer--lg);
-  --#{$card}--c-divider--child--PaddingTop: var(--#{$pf-global}--spacer--lg);
-  --#{$card}__title--not--last-child--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$card}__title-text--FontFamily: var(--#{$pf-global}--FontFamily--heading);
-  --#{$card}__title-text--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$card}__title-text--FontWeight: var(--#{$pf-global}--FontWeight--normal);
-  --#{$card}__title-text--LineHeight: var(--#{$pf-global}--LineHeight--md);
-  --#{$card}__body--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$card}__footer--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$card}__actions--PaddingLeft: var(--#{$pf-global}--spacer--md);
-  --#{$card}__actions--Gap: var(--#{$pf-global}--spacer--sm);
-  --#{$card}__actions--MarginTop: calc(var(--#{$pf-global}--spacer--form-element) * -1);
-  --#{$card}__actions--MarginBottom: calc(var(--#{$pf-global}--spacer--form-element) * -1);
+  @include pf-v5-root-vars {
+    --#{$card}--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
+    --#{$card}--BoxShadow: var(--#{$pf-global}--BoxShadow--sm);
+    --#{$card}--first-child--PaddingTop: var(--#{$pf-global}--spacer--lg);
+    --#{$card}--child--PaddingRight: var(--#{$pf-global}--spacer--lg);
+    --#{$card}--child--PaddingBottom: var(--#{$pf-global}--spacer--lg);
+    --#{$card}--child--PaddingLeft: var(--#{$pf-global}--spacer--lg);
+    --#{$card}--c-divider--child--PaddingTop: var(--#{$pf-global}--spacer--lg);
+    --#{$card}__title--not--last-child--PaddingBottom: var(--#{$pf-global}--spacer--md);
+    --#{$card}__title-text--FontFamily: var(--#{$pf-global}--FontFamily--heading);
+    --#{$card}__title-text--FontSize: var(--#{$pf-global}--FontSize--md);
+    --#{$card}__title-text--FontWeight: var(--#{$pf-global}--FontWeight--normal);
+    --#{$card}__title-text--LineHeight: var(--#{$pf-global}--LineHeight--md);
+    --#{$card}__body--FontSize: var(--#{$pf-global}--FontSize--md);
+    --#{$card}__footer--FontSize: var(--#{$pf-global}--FontSize--md);
+    --#{$card}__actions--PaddingLeft: var(--#{$pf-global}--spacer--md);
+    --#{$card}__actions--Gap: var(--#{$pf-global}--spacer--sm);
+    --#{$card}__actions--MarginTop: calc(var(--#{$pf-global}--spacer--form-element) * -1);
+    --#{$card}__actions--MarginBottom: calc(var(--#{$pf-global}--spacer--form-element) * -1);
 
-  // Expandable
-  --#{$card}__header-toggle--MarginTop: calc(var(--#{$pf-global}--spacer--form-element) * -1);
-  --#{$card}__header-toggle--MarginRight: var(--#{$pf-global}--spacer--xs);
-  --#{$card}__header-toggle--MarginBottom: calc(var(--#{$pf-global}--spacer--form-element) * -1);
-  --#{$card}__header-toggle--MarginLeft: calc(var(--#{$pf-global}--spacer--md) * -1);
-  --#{$card}__header-toggle-icon--Transition: var(--#{$pf-global}--Transition);
-  --#{$card}--m-expanded__header-toggle-icon--Rotate: 90deg;
+    // Expandable
+    --#{$card}__header-toggle--MarginTop: calc(var(--#{$pf-global}--spacer--form-element) * -1);
+    --#{$card}__header-toggle--MarginRight: var(--#{$pf-global}--spacer--xs);
+    --#{$card}__header-toggle--MarginBottom: calc(var(--#{$pf-global}--spacer--form-element) * -1);
+    --#{$card}__header-toggle--MarginLeft: calc(var(--#{$pf-global}--spacer--md) * -1);
+    --#{$card}__header-toggle-icon--Transition: var(--#{$pf-global}--Transition);
+    --#{$card}--m-expanded__header-toggle-icon--Rotate: 90deg;
 
 
-  // Selectable/Clickable
-  --#{$card}--m-selectable--BorderWidth: var(--#{$pf-global}--BorderWidth--sm);
+    // Selectable/Clickable
+    --#{$card}--m-selectable--BorderWidth: var(--#{$pf-global}--BorderWidth--sm);
 
-  // Selected state (checked) of selectable card
-  --#{$card}--m-selectable--m-selected--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
-  --#{$card}--m-selectable--m-selected--BorderColor: var(--#{$pf-global}--active-color--100);
+    // Selected state (checked) of selectable card
+    --#{$card}--m-selectable--m-selected--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
+    --#{$card}--m-selectable--m-selected--BorderColor: var(--#{$pf-global}--active-color--100);
 
-  // Hover on selectable card
-  --#{$card}--m-selectable--hover--BackgroundColor: var(--#{$pf-global}--palette--black-150);
-  --#{$card}--m-selectable--hover--BoxShadow: var(--#{$pf-global}--BoxShadow--lg);
+    // Hover on selectable card
+    --#{$card}--m-selectable--hover--BackgroundColor: var(--#{$pf-global}--palette--black-150);
+    --#{$card}--m-selectable--hover--BoxShadow: var(--#{$pf-global}--BoxShadow--lg);
 
-  // Focus on selectable card (label)
-  --#{$card}--m-selectable--focus--BackgroundColor: var(--#{$pf-global}--palette--blue-100);
-  --#{$card}--m-selectable--focus--BorderColor: var(--#{$pf-global}--active-color--100);
+    // Focus on selectable card (label)
+    --#{$card}--m-selectable--focus--BackgroundColor: var(--#{$pf-global}--palette--blue-100);
+    --#{$card}--m-selectable--focus--BorderColor: var(--#{$pf-global}--active-color--100);
 
-  // Focus on a selected card (label)
-  --#{$card}--m-selectable--m-selected--focus--BorderColor: var(--#{$pf-global}--active-color--100);
+    // Focus on a selected card (label)
+    --#{$card}--m-selectable--m-selected--focus--BorderColor: var(--#{$pf-global}--active-color--100);
 
-  // Disabled state
-  --#{$card}--m-selectable--m-disabled--BackgroundColor: var(--#{$pf-global}--palette--black-100);
-  --#{$card}--m-selectable--m-disabled--BorderColor: var(--#{$pf-global}--BorderColor--100);
-  --#{$card}--m-selectable--m-disabled--BoxShadow: var(--#{$pf-global}--BoxShadow--sm);
+    // Disabled state
+    --#{$card}--m-selectable--m-disabled--BackgroundColor: var(--#{$pf-global}--palette--black-100);
+    --#{$card}--m-selectable--m-disabled--BorderColor: var(--#{$pf-global}--BorderColor--100);
+    --#{$card}--m-selectable--m-disabled--BoxShadow: var(--#{$pf-global}--BoxShadow--sm);
 
-  // Selectable AND Clickable
-  // Hover on selectable AND clickable card
-  --#{$card}--m-selectable--m-clickable--hover--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
-  --#{$card}--m-selectable--m-clickable--hover--BoxShadow: var(--#{$pf-global}--BoxShadow--sm);
+    // Selectable AND Clickable
+    // Hover on selectable AND clickable card
+    --#{$card}--m-selectable--m-clickable--hover--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
+    --#{$card}--m-selectable--m-clickable--hover--BoxShadow: var(--#{$pf-global}--BoxShadow--sm);
 
-  // Selected selectable AND clickable card
-  --#{$card}--m-selectable--m-clickable--m-selected--BorderColor: var(--#{$pf-global}--BorderColor--100);
-  --#{$card}--m-selectable--m-clickable--m-selected--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
+    // Selected selectable AND clickable card
+    --#{$card}--m-selectable--m-clickable--m-selected--BorderColor: var(--#{$pf-global}--BorderColor--100);
+    --#{$card}--m-selectable--m-clickable--m-selected--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
 
-  // Clicked (pf-m-current) selectable AND clickable card
-  --#{$card}--m-selectable--m-clickable--m-current--BackgroundColor: var(--#{$pf-global}--palette--black-150);
-  --#{$card}--m-selectable--m-clickable--m-current--BorderColor: var(--#{$pf-global}--active-color--100);
+    // Clicked (pf-m-current) selectable AND clickable card
+    --#{$card}--m-selectable--m-clickable--m-current--BackgroundColor: var(--#{$pf-global}--palette--black-150);
+    --#{$card}--m-selectable--m-clickable--m-current--BorderColor: var(--#{$pf-global}--active-color--100);
 
-  // Hoverable/selectable raised (deprecated)
-  --#{$card}--m-hoverable-raised--hover--BoxShadow: var(--#{$pf-global}--BoxShadow--md);
-  --#{$card}--m-hoverable-raised--hover--before--BackgroundColor: var(--#{$pf-global}--active-color--400);
-  --#{$card}--m-selectable-raised--before--Right: 0;
-  --#{$card}--m-selectable-raised--before--Bottom: 0;
-  --#{$card}--m-selectable-raised--before--Left: 0;
-  --#{$card}--m-flat--m-selectable-raised--before--Right: calc(-1 * var(--#{$card}--m-flat--BorderWidth));
-  --#{$card}--m-flat--m-selectable-raised--before--Bottom: calc(-1 * var(--#{$card}--m-flat--BorderWidth));
-  --#{$card}--m-flat--m-selectable-raised--before--Left: calc(-1 * var(--#{$card}--m-flat--BorderWidth));
-  --#{$card}--m-selectable-raised--before--Height: var(--#{$pf-global}--BorderWidth--xl);
-  --#{$card}--m-selectable-raised--before--BackgroundColor: transparent;
-  --#{$card}--m-selectable-raised--before--Transition: none;
-  --#{$card}--m-selectable-raised--before--ScaleY: 1;
-  --#{$card}--m-selectable-raised--before--TranslateY: 0;
-  --#{$card}--m-selectable-raised--hover--BoxShadow: var(--#{$pf-global}--BoxShadow--md);
-  --#{$card}--m-selectable-raised--hover--before--BackgroundColor: var(--#{$pf-global}--active-color--400);
-  --#{$card}--m-selectable-raised--focus--BoxShadow: var(--#{$pf-global}--BoxShadow--md);
-  --#{$card}--m-selectable-raised--focus--before--BackgroundColor: var(--#{$pf-global}--active-color--400);
-  --#{$card}--m-selectable-raised--active--BoxShadow: var(--#{$pf-global}--BoxShadow--md);
-  --#{$card}--m-selectable-raised--active--before--BackgroundColor: var(--#{$pf-global}--active-color--400);
-  --#{$card}--m-selectable-raised--m-selected-raised--before--BackgroundColor: var(--#{$pf-global}--active-color--100);
-  --#{$card}--m-selectable-raised--m-selected-raised--BoxShadow: var(--#{$pf-global}--BoxShadow--lg);
-  --#{$card}--m-selectable-raised--m-selected-raised--TranslateY--base: #{pf-size-prem(-8px)};
-  --#{$card}--m-selectable-raised--m-selected-raised--TranslateY: var(--#{$card}--m-selectable-raised--m-selected-raised--TranslateY--base);
-  --#{$card}--m-flat--m-selectable-raised--m-selected-raised--TranslateY: calc(var(--#{$card}--m-selectable-raised--m-selected-raised--TranslateY--base) + var(--#{$card}--m-flat--BorderWidth));
-  --#{$card}--m-rounded--m-selectable-raised--m-selected-raised--TranslateY: calc(var(--#{$card}--m-selectable-raised--m-selected-raised--TranslateY--base) + var(--#{$card}--m-rounded--BorderRadius));
-  --#{$card}--m-selectable-raised--m-selected-raised--ZIndex: var(--#{$pf-global}--ZIndex--xs);
-  --#{$card}--m-selectable-raised--m-selected-raised--Transition: transform .25s linear, box-shadow .25s linear;
-  --#{$card}--m-selectable-raised--m-selected-raised--before--Transition: transform .25s linear;
-  --#{$card}--m-selectable-raised--m-selected-raised--before--TranslateY: calc(var(--#{$card}--m-selectable-raised--m-selected-raised--TranslateY) * -1);
-  --#{$card}--m-selectable-raised--m-selected-raised--before--ScaleY: 2;
-  --#{$card}--m-non-selectable-raised--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-200);
-  --#{$card}--m-non-selectable-raised--before--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
-  --#{$card}--m-non-selectable-raised--before--ScaleY: 2;
-  --#{$card}--m-flat--m-non-selectable-raised--before--BorderColor: var(--#{$pf-global}--disabled-color--200);
+    // Hoverable/selectable raised (deprecated)
+    --#{$card}--m-hoverable-raised--hover--BoxShadow: var(--#{$pf-global}--BoxShadow--md);
+    --#{$card}--m-hoverable-raised--hover--before--BackgroundColor: var(--#{$pf-global}--active-color--400);
+    --#{$card}--m-selectable-raised--before--Right: 0;
+    --#{$card}--m-selectable-raised--before--Bottom: 0;
+    --#{$card}--m-selectable-raised--before--Left: 0;
+    --#{$card}--m-flat--m-selectable-raised--before--Right: calc(-1 * var(--#{$card}--m-flat--BorderWidth));
+    --#{$card}--m-flat--m-selectable-raised--before--Bottom: calc(-1 * var(--#{$card}--m-flat--BorderWidth));
+    --#{$card}--m-flat--m-selectable-raised--before--Left: calc(-1 * var(--#{$card}--m-flat--BorderWidth));
+    --#{$card}--m-selectable-raised--before--Height: var(--#{$pf-global}--BorderWidth--xl);
+    --#{$card}--m-selectable-raised--before--BackgroundColor: transparent;
+    --#{$card}--m-selectable-raised--before--Transition: none;
+    --#{$card}--m-selectable-raised--before--ScaleY: 1;
+    --#{$card}--m-selectable-raised--before--TranslateY: 0;
+    --#{$card}--m-selectable-raised--hover--BoxShadow: var(--#{$pf-global}--BoxShadow--md);
+    --#{$card}--m-selectable-raised--hover--before--BackgroundColor: var(--#{$pf-global}--active-color--400);
+    --#{$card}--m-selectable-raised--focus--BoxShadow: var(--#{$pf-global}--BoxShadow--md);
+    --#{$card}--m-selectable-raised--focus--before--BackgroundColor: var(--#{$pf-global}--active-color--400);
+    --#{$card}--m-selectable-raised--active--BoxShadow: var(--#{$pf-global}--BoxShadow--md);
+    --#{$card}--m-selectable-raised--active--before--BackgroundColor: var(--#{$pf-global}--active-color--400);
+    --#{$card}--m-selectable-raised--m-selected-raised--before--BackgroundColor: var(--#{$pf-global}--active-color--100);
+    --#{$card}--m-selectable-raised--m-selected-raised--BoxShadow: var(--#{$pf-global}--BoxShadow--lg);
+    --#{$card}--m-selectable-raised--m-selected-raised--TranslateY--base: #{pf-size-prem(-8px)};
+    --#{$card}--m-selectable-raised--m-selected-raised--TranslateY: var(--#{$card}--m-selectable-raised--m-selected-raised--TranslateY--base);
+    --#{$card}--m-flat--m-selectable-raised--m-selected-raised--TranslateY: calc(var(--#{$card}--m-selectable-raised--m-selected-raised--TranslateY--base) + var(--#{$card}--m-flat--BorderWidth));
+    --#{$card}--m-rounded--m-selectable-raised--m-selected-raised--TranslateY: calc(var(--#{$card}--m-selectable-raised--m-selected-raised--TranslateY--base) + var(--#{$card}--m-rounded--BorderRadius));
+    --#{$card}--m-selectable-raised--m-selected-raised--ZIndex: var(--#{$pf-global}--ZIndex--xs);
+    --#{$card}--m-selectable-raised--m-selected-raised--Transition: transform .25s linear, box-shadow .25s linear;
+    --#{$card}--m-selectable-raised--m-selected-raised--before--Transition: transform .25s linear;
+    --#{$card}--m-selectable-raised--m-selected-raised--before--TranslateY: calc(var(--#{$card}--m-selectable-raised--m-selected-raised--TranslateY) * -1);
+    --#{$card}--m-selectable-raised--m-selected-raised--before--ScaleY: 2;
+    --#{$card}--m-non-selectable-raised--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-200);
+    --#{$card}--m-non-selectable-raised--before--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
+    --#{$card}--m-non-selectable-raised--before--ScaleY: 2;
+    --#{$card}--m-flat--m-non-selectable-raised--before--BorderColor: var(--#{$pf-global}--disabled-color--200);
 
-  // Compact
-  --#{$card}--m-compact__body--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$card}--m-compact__footer--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$card}--m-compact--first-child--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$card}--m-compact--child--PaddingRight: var(--#{$pf-global}--spacer--md);
-  --#{$card}--m-compact--child--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$card}--m-compact--child--PaddingLeft: var(--#{$pf-global}--spacer--md);
-  --#{$card}--m-compact--c-divider--child--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$card}--m-compact__title--not--last-child--PaddingBottom: var(--#{$pf-global}--spacer--sm);
+    // Compact
+    --#{$card}--m-compact__body--FontSize: var(--#{$pf-global}--FontSize--sm);
+    --#{$card}--m-compact__footer--FontSize: var(--#{$pf-global}--FontSize--sm);
+    --#{$card}--m-compact--first-child--PaddingTop: var(--#{$pf-global}--spacer--md);
+    --#{$card}--m-compact--child--PaddingRight: var(--#{$pf-global}--spacer--md);
+    --#{$card}--m-compact--child--PaddingBottom: var(--#{$pf-global}--spacer--md);
+    --#{$card}--m-compact--child--PaddingLeft: var(--#{$pf-global}--spacer--md);
+    --#{$card}--m-compact--c-divider--child--PaddingTop: var(--#{$pf-global}--spacer--md);
+    --#{$card}--m-compact__title--not--last-child--PaddingBottom: var(--#{$pf-global}--spacer--sm);
 
-  // Display large
-  --#{$card}--m-display-lg__title-text--FontSize: var(--#{$pf-global}--FontSize--xl);
-  --#{$card}--m-display-lg--first-child--PaddingTop: var(--#{$pf-global}--spacer--xl);
-  --#{$card}--m-display-lg--child--PaddingRight: var(--#{$pf-global}--spacer--xl);
-  --#{$card}--m-display-lg--child--PaddingBottom: var(--#{$pf-global}--spacer--xl);
-  --#{$card}--m-display-lg--child--PaddingLeft: var(--#{$pf-global}--spacer--xl);
-  --#{$card}--m-display-lg--c-divider--child--PaddingTop: var(--#{$pf-global}--spacer--xl);
-  --#{$card}--m-display-lg__title--not--last-child--PaddingBottom: var(--#{$pf-global}--spacer--lg);
+    // Display large
+    --#{$card}--m-display-lg__title-text--FontSize: var(--#{$pf-global}--FontSize--xl);
+    --#{$card}--m-display-lg--first-child--PaddingTop: var(--#{$pf-global}--spacer--xl);
+    --#{$card}--m-display-lg--child--PaddingRight: var(--#{$pf-global}--spacer--xl);
+    --#{$card}--m-display-lg--child--PaddingBottom: var(--#{$pf-global}--spacer--xl);
+    --#{$card}--m-display-lg--child--PaddingLeft: var(--#{$pf-global}--spacer--xl);
+    --#{$card}--m-display-lg--c-divider--child--PaddingTop: var(--#{$pf-global}--spacer--xl);
+    --#{$card}--m-display-lg__title--not--last-child--PaddingBottom: var(--#{$pf-global}--spacer--lg);
 
-  // Flat
-  --#{$card}--m-flat--BorderWidth: var(--#{$pf-global}--BorderWidth--sm);
-  --#{$card}--m-flat--BorderColor: var(--#{$pf-global}--BorderColor--100);
+    // Flat
+    --#{$card}--m-flat--BorderWidth: var(--#{$pf-global}--BorderWidth--sm);
+    --#{$card}--m-flat--BorderColor: var(--#{$pf-global}--BorderColor--100);
 
-  // Rounded
-  --#{$card}--m-rounded--BorderRadius: var(--#{$pf-global}--BorderRadius--sm);
+    // Rounded
+    --#{$card}--m-rounded--BorderRadius: var(--#{$pf-global}--BorderRadius--sm);
 
-  // Full height
-  --#{$card}--m-full-height--Height: 100%;
+    // Full height
+    --#{$card}--m-full-height--Height: 100%;
 
-  // No box shadow
-  --#{$card}--m-plain--BoxShadow: none;
-  --#{$card}--m-plain--BackgroundColor: transparent;
+    // No box shadow
+    --#{$card}--m-plain--BoxShadow: none;
+    --#{$card}--m-plain--BackgroundColor: transparent;
 
-  // Toggle right
-  --#{$card}__header--m-toggle-right--toggle--MarginRight: calc(var(--#{$pf-global}--spacer--form-element) * -1);
-  --#{$card}__header--m-toggle-right--toggle--MarginLeft: var(--#{$pf-global}--spacer--xs);
+    // Toggle right
+    --#{$card}__header--m-toggle-right--toggle--MarginRight: calc(var(--#{$pf-global}--spacer--form-element) * -1);
+    --#{$card}__header--m-toggle-right--toggle--MarginLeft: var(--#{$pf-global}--spacer--xs);
 
-  // Card input (selectable raised)
-  --#{$card}__input--focus--BorderWidth: var(--#{$pf-global}--BorderWidth--md);
-  --#{$card}__input--focus--BorderColor: var(--#{$pf-global}--primary-color--100);
+    // Card input (selectable raised)
+    --#{$card}__input--focus--BorderWidth: var(--#{$pf-global}--BorderWidth--md);
+    --#{$card}__input--focus--BorderColor: var(--#{$pf-global}--primary-color--100);
+  }
 
   position: relative;
   display: flex;
@@ -501,6 +503,6 @@
 // stylelint-disable no-invalid-position-at-import-rule
 @import "themes/dark/card";
 
-@include pf-v5-theme-dark {
+@include pf-v5-root-vars(dark) {
   @include pf-v5-theme-dark-card;
 }
